crates/gmsh/include/gmshc.h


GMSH_API void gmshModelOccAddThruSections(const int *wireTags, const size_t wireTags_n,
                                          int **outDimTags, size_t *outDimTags_n,
                                          const int tag,
                                          const int makeSolid,
                                          const int makeRuled,
                                          const int maxDegree,
                                          const char *continuity,
                                          const char *parametrization,
                                          const int smoothing,
                                          int *ierr);
GMSH_API void gmshModelOccAddThickSolid(const int volumeTag,
                                        const int *excludeSurfaceTags, const size_t excludeSurfaceTags_n,
                                        const double offset,
                                        int **outDimTags, size_t *outDimTags_n,
                                        const int tag,
                                        int *ierr);
GMSH_API void gmshModelOccExtrude(const int *dimTags, const size_t dimTags_n,
                                  const double dx,
                                  const double dy,
                                  const double dz,
                                  int **outDimTags, size_t *outDimTags_n,
                                  const int *numElements, const size_t numElements_n,
                                  const double *heights, const size_t heights_n,
                                  const int recombine,
                                  int *ierr);
GMSH_API void gmshModelOccRevolve(const int *dimTags, const size_t dimTags_n,
                                  const double x,
                                  const double y,
                                  const double z,
                                  const double ax,
                                  const double ay,
                                  const double az,
                                  const double angle,
                                  int **outDimTags, size_t *outDimTags_n,
                                  const int *numElements, const size_t numElements_n,
                                  const double *heights, const size_t heights_n,
                                  const int recombine,
                                  int *ierr);
GMSH_API void gmshModelOccAddPipe(const int *dimTags, const size_t dimTags_n,
                                  const int wireTag,
                                  int **outDimTags, size_t *outDimTags_n,
                                  const char *trihedron,
                                  int *ierr);
GMSH_API void gmshModelOccFillet(const int *volumeTags, const size_t volumeTags_n,
                                 const int *curveTags, const size_t curveTags_n,
                                 const double *radii, const size_t radii_n,
                                 int **outDimTags, size_t *outDimTags_n,
                                 const int removeVolume,
                                 int *ierr);
GMSH_API void gmshModelOccChamfer(const int *volumeTags, const size_t volumeTags_n,
                                  const int *curveTags, const size_t curveTags_n,
                                  const int *surfaceTags, const size_t surfaceTags_n,
                                  const double *distances, const size_t distances_n,
                                  int **outDimTags, size_t *outDimTags_n,
                                  const int removeVolume,
                                  int *ierr);
GMSH_API void gmshModelOccDefeature(const int *volumeTags, const size_t volumeTags_n,
                                    const int *surfaceTags, const size_t surfaceTags_n,
                                    int **outDimTags, size_t *outDimTags_n,
                                    const int removeVolume,
                                    int *ierr);
GMSH_API int gmshModelOccFillet2D(const int edgeTag1,
                                  const int edgeTag2,
                                  const double radius,
                                  const int tag,
                                  int *ierr);
GMSH_API int gmshModelOccChamfer2D(const int edgeTag1,
                                   const int edgeTag2,
                                   const double distance1,
                                   const double distance2,
                                   const int tag,
                                   int *ierr);
GMSH_API void gmshModelOccOffsetCurve(const int curveLoopTag,
                                      const double offset,
                                      int **outDimTags, size_t *outDimTags_n,
                                      int *ierr);
GMSH_API void gmshModelOccGetDistance(const int dim1,
                                      const int tag1,
                                      const int dim2,
                                      const int tag2,
                                      double *distance,
                                      double *x1,
                                      double *y1,
                                      double *z1,
                                      double *x2,
                                      double *y2,
                                      double *z2,
                                      int *ierr);
GMSH_API void gmshModelOccFuse(const int *objectDimTags, const size_t objectDimTags_n,
                               const int *toolDimTags, const size_t toolDimTags_n,
                               int **outDimTags, size_t *outDimTags_n,
                               int ***outDimTagsMap, size_t **outDimTagsMap_n, size_t *outDimTagsMap_nn,
                               const int tag,
                               const int removeObject,
                               const int removeTool,
                               int *ierr);
GMSH_API void gmshModelOccIntersect(const int *objectDimTags, const size_t objectDimTags_n,
                                    const int *toolDimTags, const size_t toolDimTags_n,
                                    int **outDimTags, size_t *outDimTags_n,
                                    int ***outDimTagsMap, size_t **outDimTagsMap_n, size_t *outDimTagsMap_nn,
                                    const int tag,
                                    const int removeObject,
                                    const int removeTool,
                                    int *ierr);
GMSH_API void gmshModelOccCut(const int *objectDimTags, const size_t objectDimTags_n,
                              const int *toolDimTags, const size_t toolDimTags_n,
                              int **outDimTags, size_t *outDimTags_n,
                              int ***outDimTagsMap, size_t **outDimTagsMap_n, size_t *outDimTagsMap_nn,
                              const int tag,
                              const int removeObject,
                              const int removeTool,
                              int *ierr);
GMSH_API void gmshModelOccFragment(const int *objectDimTags, const size_t objectDimTags_n,
                                   const int *toolDimTags, const size_t toolDimTags_n,
                                   int **outDimTags, size_t *outDimTags_n,
                                   int ***outDimTagsMap, size_t **outDimTagsMap_n, size_t *outDimTagsMap_nn,
                                   const int tag,
                                   const int removeObject,
                                   const int removeTool,
                                   int *ierr);
GMSH_API void gmshModelOccTranslate(const int *dimTags, const size_t dimTags_n,
                                    const double dx,
                                    const double dy,
                                    const double dz,
                                    int *ierr);
GMSH_API void gmshModelOccRotate(const int *dimTags, const size_t dimTags_n,
                                 const double x,
                                 const double y,
                                 const double z,
                                 const double ax,
                                 const double ay,
                                 const double az,
                                 const double angle,
                                 int *ierr);
GMSH_API void gmshModelOccDilate(const int *dimTags, const size_t dimTags_n,
                                 const double x,
                                 const double y,
                                 const double z,
                                 const double a,
                                 const double b,
                                 const double c,
                                 int *ierr);
GMSH_API void gmshModelOccMirror(const int *dimTags, const size_t dimTags_n,
                                 const double a,
                                 const double b,
                                 const double c,
                                 const double d,
                                 int *ierr);
GMSH_API void gmshModelOccSymmetrize(const int *dimTags, const size_t dimTags_n,
                                     const double a,
                                     const double b,
                                     const double c,
                                     const double d,
                                     int *ierr);
GMSH_API void gmshModelOccAffineTransform(const int *dimTags, const size_t dimTags_n,
                                          const double *affineTransform, const size_t affineTransform_n,
                                          int *ierr);
GMSH_API void gmshModelOccCopy(const int *dimTags, const size_t dimTags_n,
                               int **outDimTags, size_t *outDimTags_n,
                               int *ierr);
GMSH_API void gmshModelOccRemove(const int *dimTags, const size_t dimTags_n,
                                 const int recursive,
                                 int *ierr);
GMSH_API void gmshModelOccRemoveAllDuplicates(int *ierr);
GMSH_API void gmshModelOccHealShapes(int **outDimTags, size_t *outDimTags_n,
                                     const int *dimTags, const size_t dimTags_n,
                                     const double tolerance,
                                     const int fixDegenerated,
                                     const int fixSmallEdges,
                                     const int fixSmallFaces,
                                     const int sewFaces,
                                     const int makeSolids,
                                     int *ierr);
GMSH_API void gmshModelOccConvertToNURBS(const int *dimTags, const size_t dimTags_n,
                                         int *ierr);
GMSH_API void gmshModelOccImportShapes(const char *fileName,
                                       int **outDimTags, size_t *outDimTags_n,
                                       const int highestDimOnly,
                                       const char *format,
                                       int *ierr);
GMSH_API void gmshModelOccImportShapesNativePointer(const void *shape,
                                                    int **outDimTags, size_t *outDimTags_n,
                                                    const int highestDimOnly,
                                                    int *ierr);
GMSH_API void gmshModelOccGetEntities(int **dimTags, size_t *dimTags_n,
                                      const int dim,
                                      int *ierr);
GMSH_API void gmshModelOccGetEntitiesInBoundingBox(const double xmin,
                                                   const double ymin,
                                                   const double zmin,
                                                   const double xmax,
                                                   const double ymax,
                                                   const double zmax,
                                                   int **dimTags, size_t *dimTags_n,
                                                   const int dim,
                                                   int *ierr);
GMSH_API void gmshModelOccGetBoundingBox(const int dim,
                                         const int tag,
                                         double *xmin,
                                         double *ymin,
                                         double *zmin,
                                         double *xmax,
                                         double *ymax,
                                         double *zmax,
                                         int *ierr);