crates/gmsh/src/bindings.rs

unsafe extern "C" {
    pub fn gmshModelOccAddThruSections(
        wireTags: *const ::std::os::raw::c_int,
        wireTags_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        tag: ::std::os::raw::c_int,
        makeSolid: ::std::os::raw::c_int,
        makeRuled: ::std::os::raw::c_int,
        maxDegree: ::std::os::raw::c_int,
        continuity: *const ::std::os::raw::c_char,
        parametrization: *const ::std::os::raw::c_char,
        smoothing: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccAddThickSolid(
        volumeTag: ::std::os::raw::c_int,
        excludeSurfaceTags: *const ::std::os::raw::c_int,
        excludeSurfaceTags_n: usize,
        offset: f64,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccExtrude(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        dx: f64,
        dy: f64,
        dz: f64,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        numElements: *const ::std::os::raw::c_int,
        numElements_n: usize,
        heights: *const f64,
        heights_n: usize,
        recombine: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccRevolve(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        x: f64,
        y: f64,
        z: f64,
        ax: f64,
        ay: f64,
        az: f64,
        angle: f64,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        numElements: *const ::std::os::raw::c_int,
        numElements_n: usize,
        heights: *const f64,
        heights_n: usize,
        recombine: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccAddPipe(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        wireTag: ::std::os::raw::c_int,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        trihedron: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccFillet(
        volumeTags: *const ::std::os::raw::c_int,
        volumeTags_n: usize,
        curveTags: *const ::std::os::raw::c_int,
        curveTags_n: usize,
        radii: *const f64,
        radii_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        removeVolume: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccChamfer(
        volumeTags: *const ::std::os::raw::c_int,
        volumeTags_n: usize,
        curveTags: *const ::std::os::raw::c_int,
        curveTags_n: usize,
        surfaceTags: *const ::std::os::raw::c_int,
        surfaceTags_n: usize,
        distances: *const f64,
        distances_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        removeVolume: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccDefeature(
        volumeTags: *const ::std::os::raw::c_int,
        volumeTags_n: usize,
        surfaceTags: *const ::std::os::raw::c_int,
        surfaceTags_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        removeVolume: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccFillet2D(
        edgeTag1: ::std::os::raw::c_int,
        edgeTag2: ::std::os::raw::c_int,
        radius: f64,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccChamfer2D(
        edgeTag1: ::std::os::raw::c_int,
        edgeTag2: ::std::os::raw::c_int,
        distance1: f64,
        distance2: f64,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccOffsetCurve(
        curveLoopTag: ::std::os::raw::c_int,
        offset: f64,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccGetDistance(
        dim1: ::std::os::raw::c_int,
        tag1: ::std::os::raw::c_int,
        dim2: ::std::os::raw::c_int,
        tag2: ::std::os::raw::c_int,
        distance: *mut f64,
        x1: *mut f64,
        y1: *mut f64,
        z1: *mut f64,
        x2: *mut f64,
        y2: *mut f64,
        z2: *mut f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccFuse(
        objectDimTags: *const ::std::os::raw::c_int,
        objectDimTags_n: usize,
        toolDimTags: *const ::std::os::raw::c_int,
        toolDimTags_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        outDimTagsMap: *mut *mut *mut ::std::os::raw::c_int,
        outDimTagsMap_n: *mut *mut usize,
        outDimTagsMap_nn: *mut usize,
        tag: ::std::os::raw::c_int,
        removeObject: ::std::os::raw::c_int,
        removeTool: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccIntersect(
        objectDimTags: *const ::std::os::raw::c_int,
        objectDimTags_n: usize,
        toolDimTags: *const ::std::os::raw::c_int,
        toolDimTags_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        outDimTagsMap: *mut *mut *mut ::std::os::raw::c_int,
        outDimTagsMap_n: *mut *mut usize,
        outDimTagsMap_nn: *mut usize,
        tag: ::std::os::raw::c_int,
        removeObject: ::std::os::raw::c_int,
        removeTool: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccCut(
        objectDimTags: *const ::std::os::raw::c_int,
        objectDimTags_n: usize,
        toolDimTags: *const ::std::os::raw::c_int,
        toolDimTags_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        outDimTagsMap: *mut *mut *mut ::std::os::raw::c_int,
        outDimTagsMap_n: *mut *mut usize,
        outDimTagsMap_nn: *mut usize,
        tag: ::std::os::raw::c_int,
        removeObject: ::std::os::raw::c_int,
        removeTool: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccFragment(
        objectDimTags: *const ::std::os::raw::c_int,
        objectDimTags_n: usize,
        toolDimTags: *const ::std::os::raw::c_int,
        toolDimTags_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        outDimTagsMap: *mut *mut *mut ::std::os::raw::c_int,
        outDimTagsMap_n: *mut *mut usize,
        outDimTagsMap_nn: *mut usize,
        tag: ::std::os::raw::c_int,
        removeObject: ::std::os::raw::c_int,
        removeTool: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccTranslate(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        dx: f64,
        dy: f64,
        dz: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccRotate(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        x: f64,
        y: f64,
        z: f64,
        ax: f64,
        ay: f64,
        az: f64,
        angle: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccDilate(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        x: f64,
        y: f64,
        z: f64,
        a: f64,
        b: f64,
        c: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccMirror(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        a: f64,
        b: f64,
        c: f64,
        d: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccSymmetrize(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        a: f64,
        b: f64,
        c: f64,
        d: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccAffineTransform(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        affineTransform: *const f64,
        affineTransform_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccCopy(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccRemove(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        recursive: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccRemoveAllDuplicates(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelOccHealShapes(
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        tolerance: f64,
        fixDegenerated: ::std::os::raw::c_int,
        fixSmallEdges: ::std::os::raw::c_int,
        fixSmallFaces: ::std::os::raw::c_int,
        sewFaces: ::std::os::raw::c_int,
        makeSolids: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccConvertToNURBS(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccImportShapes(
        fileName: *const ::std::os::raw::c_char,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        highestDimOnly: ::std::os::raw::c_int,
        format: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccImportShapesNativePointer(
        shape: *const ::std::os::raw::c_void,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        highestDimOnly: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccGetEntities(
        dimTags: *mut *mut ::std::os::raw::c_int,
        dimTags_n: *mut usize,
        dim: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccGetEntitiesInBoundingBox(
        xmin: f64,
        ymin: f64,
        zmin: f64,
        xmax: f64,
        ymax: f64,
        zmax: f64,
        dimTags: *mut *mut ::std::os::raw::c_int,
        dimTags_n: *mut usize,
        dim: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccGetBoundingBox(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        xmin: *mut f64,
        ymin: *mut f64,
        zmin: *mut f64,
        xmax: *mut f64,
        ymax: *mut f64,
        zmax: *mut f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
